# offline-transcription-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_faster_whisper.py  main_multiupload.py  main_old.py  make_docx.py  make_pdf.py  pyproject.toml  requirements.txt  transcribe.py  transcription-webapp.code-workspace
.cache/hub/models--Systran--faster-whisper-medium.en/refs/: main
.streamlit/: config.toml
app/: main.py  main_multiupload.py
app/AnnotationGraph/: Anchor.py  Annotation.py  Layer.py  Schema.py  TrackedMap.py
app/converters/: srt2docx.py  vtt2txt.py
app/transcribers/: vosk.py  whisper.py
audio/: test-recording.docx
converters/: vtt2pdf.py
standalone-scripts/: main_old.py  make_pdf.py  transcribe.py
tests/: agTest.ipynb  diarized_data.json  nzilbb_data.json  whisperxDiarization.ipynb
transcribers/: vosk.py  whisper.py
