[tool.poetry]
name = "transcription-webapp"
version = "0.1.0"
description = "This webapp provides transcription with a local model"
authors = ["michaelcoe <michael.coe@canterbury.ac.nz>"]
license = "GPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
python-docx = "^1.1.2"
blobfile = "^3.0.0"
reportlab = "^4.2.2"
numpy = "^2.1.1"
faster-whisper = "^1.0.3"
vosk = "^0.3.45"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
